MDEV-37808 "Local temporary space limit reached" on not so rare occasions

This bug happens when using galera, max_tmp_session_space_usage and a
transaction that uses temporary file of a size between 'binlog-cache-size'
(default 32K) and 64K followed by a change user command.

In the case of a transaction of size between 32k and 64k, the server don't
truncate the binary log file on disk to speed up things, which is fine.

The bug was that change_user() reset the tmp_space_used variable and the
next time the temporary_file was truncated, we got a negative value for
tmp_space_used, which caused the error "Local temporary space limit
reached".

Fixed by not resetting tmp_space_used in init(), which is called by
change_user().

Other things
- Truncate binary log cache files when change_user() is called. This
  makes the new users session not depending on log file sizes by previous
  user.
- Some new ASSERT and DBUG_ENTER
- Fixed typo in DBUG output in ma_pagecache.c